Altered styling for body background image due to issues on mobile.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
   background-color: skyblue;
   background-size: cover;
+  background-repeat: no-repeat;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
 }
 
 .weather-popup {
